--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "gulp_build",
+    "name": "js_project",
     "version": "1.0.0",
     "description": "",
     "main": "gulpfile.js",
